fixed footer callout spacing on home page

--- a/scss/home.scss
+++ b/scss/home.scss
@@ -135,7 +135,7 @@
 
 
 // ---------------------------------------------------------------------------------
-// ----- PERKS        --------------------------------------------------------------
+// ----- PERKS ---------------------------------------------------------------------
 // ---------------------------------------------------------------------------------
 .hp-perks-section-container {
 	display: flex;
@@ -551,8 +551,12 @@
 }
 
 
-
-
+// ---------------------------------------------------------------------------------
+// ----- FOOTER --------------------------------------------------------------------
+// ---------------------------------------------------------------------------------
+.call-now-booking-callout {
+	margin-top: 4rem;
+}
 
 
 
